--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=employee-management
+spring.datasource.url=jdbc:mysql://localhost:3306/employeeDataset
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.session.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+logging.level.com.example.demo=DEBUG
+logging.file.name=application.log
